@@ -3,6 +3,8 @@ V.Next
 - [PATCH] Add JWT header field for KDF version (#2220)
 - [MINOR] Catch unknown Keystore errors during decryption (#2255)
 - [MINOR] Changes to launch AEA app from Broker's WebView (#2264)
+- [MINOR] AuthFidoChallengeHandler and other passkey changes (#2146)
+- [MAJOR] Addition of Credential Manager and associated passkey logic (#2267)
 
 V.16.2.0
 ----------
@@ -17,7 +19,6 @@ V.16.2.0
 - [MINOR] Bumping Moshi versions; force setting Okio version (#2210)
 - [PATCH] Fix to generate new Asymmetric Key (#2222)
 - [MINOR] Move addition of passkey header from BaseController to WebView fragment (#2237)
-- [MINOR] AuthFidoChallengeHandler and other passkey changes (#2146)
 
 V.16.1.1
 ----------
